# physician-notetaker-emittr

./: README.md  medical_report.json  pyproject.toml  requirements.txt  sentiment_analysis.json  soap_note.json  task.md  test.py  transcript.txt
src/: ner.py  pipeline.py  sentiment.py  soap.py  summarizer.py  utils.py
